fix(style): center align post footer contents

--- a/src/style/post.css
+++ b/src/style/post.css
@@ -94,6 +94,7 @@ main>.h-entry:first-child {
 	border: double var(--border-color);
 	padding: 0.25em;
 	margin: 0px;
+	align-content: center;
 }
 
 .h-entry>.e-content {
